Fixed minimum height of publication and supervisor section to remove whitespace on larger screens

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     gap: 40px;
     padding: 100px 20px;
     background-image: url(images/blue-pic.jpg);
+    min-height: 25vh;
 }
 
 .hero-section .content {
@@ -54,6 +55,7 @@ body {
     align-items: center;
     padding: 80px;
     gap: 10px;
+    min-height: 20vh;
 }
 
 .publication-section .main-text {
@@ -91,7 +93,6 @@ body {
     justify-content: space-evenly;
     align-items: center;
     gap: 25px;
-    max-width: 700px;
 }
 
 .boxes {
